--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-    "name": "FinTrack Lite",
-    "short_name": "FinTrack",
-    "description": "A comprehensive budgeting and expense tracking app for personal finance management.",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#E0E8EF",
-    "theme_color": "#6699CC",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "FinTrack Lite",
+  "short_name": "FinTrack",
+  "description": "A comprehensive budgeting and expense tracking app for personal finance management.",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#6699CC",
+  "background_color": "#E0E8EF"
 }
