--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FinTrack Lite",
-  "short_name": "FinTrack",
+  "name": "Paisa View",
+  "short_name": "Paisa View",
   "description": "A comprehensive budgeting and expense tracking app for personal finance management.",
   "icons": [
     {
