--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
   "description": "A comprehensive budgeting and expense tracking app for personal finance management.",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "display": "standalone",
-  "theme_color": "#6699CC",
-  "background_color": "#E0E8EF"
+  "start_url": "/"
 }
