--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,24 @@
+
 {
   "name": "Paisa View",
-  "short_name": "Paisa View",
+  "short_name": "Paisa",
   "description": "A comprehensive budgeting and expense tracking app for personal finance management.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "start_url": "/"
+  ]
 }
+
+    
